# trope-checker

./: .editorconfig  .envrc  .gitattributes  .gitignore  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  AUDIT.adoc  CHANGELOG.md  CONTRIBUTING.md  EXPLAINME.adoc  Justfile  README.adoc  SECURITY.md  coordination.k9  flake.nix  trope-particularity-calculus.adoc
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md  SUPPORT  copilot-instructions.md  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  (+2 more)
.machine_readable/: ADJUST.contractile  ECOSYSTEM.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile  META.a2ml  MUST.contractile  STATE.a2ml  TRUST.contractile  root-allow.txt
.well-known/: humans.txt  security.txt
ci/: CI-CRITICALITY.toml
container/: .gatekeeper.yaml  0.1-AI-MANIFEST.a2ml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
docs/: CONTRIBUTING-A-FRONTEND.adoc  QUICKSTART.adoc  RSR_OUTLINE.adoc  STATE-VISUALIZER.adoc  proof-debt.adoc  tech-debt-2026-05-26.adoc  tech-debt-2026-05-26.md
docs-template/: README.adoc  architecture.adoc  contributing.adoc  troubleshooting.adoc  usage.adoc
schemas/: trope-ir.schema.json
scripts/: check-no-vlang.sh  validate-template.sh
session/: README.md  custom-checks.k9
spec/: calculus-v0.2-draft.adoc  calculus.adoc  trope-ir.adoc
src/rust/: Cargo.toml
src/rust/src/: main.rs
tests/: aspect_tests.sh  e2e.sh
(+201 files in other folders)
